// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: InputGroup BasicExample renders 1`] = `
<Fragment>
  <h2
    id="basic-example"
  >
    Basic example
  </h2>
  <p>
    Add a 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;span&gt;
    </PrismCode>
     with class 
    <Property
      value=".input-group-addon"
    />
     to get a gray box on the left, right or both sides of an 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;input&gt;
    </PrismCode>
     element. The position of your 
    <Property
      value=".input-group-addon"
    />
     depends on if you place it before or after the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;input
    </PrismCode>
     element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <InputGroup
      id="input-id-1"
      label="Name"
      placeholder="Name"
      prefixValue="Mr."
      type="text"
    />
     
    


    <InputGroup
      id="input-id-2"
      label="Email"
      placeholder="Email"
      prefixType="icon"
      prefixValue="email"
      type="text"
    />
     
    


    <InputGroup
      id="input-id-3"
      label="Amount"
      placeholder="Rounded to nearest $"
      postfixValue=".00"
      prefixType="icon"
      prefixValue="attach_money"
      type="number"
    />
     
    


    <InputGroup
      id="input-id-4"
      label="Notes"
      placeholder="Special requests"
      prefixType="icon"
      prefixValue="format_quote"
      type="textarea"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: InputGroup ButtonAddons renders 1`] = `
<Fragment>
  <h2
    id="button-addons"
  >
    Button addons
  </h2>
  <p>
    If you want 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;button&gt;
    </PrismCode>
    s included with your input elements you can just add a 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;button&gt;
    </PrismCode>
     inside a input-group like you would anywhere else.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <InputGroup
      postfixBtnColor="executive"
      postfixType="button"
      postfixValue="Button"
      type="text"
    />
     
    


    <InputGroup
      postfixBtnColor="destructive"
      postfixType="button"
      postfixValue="Button"
      prefixBtnColor="guiding"
      prefixType="button"
      prefixValue="Button"
      type="text"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: InputGroup CheckboxesAndRadios renders 1`] = `
<Fragment>
  <h2
    id="checkboxes-and-radios"
  >
    Checkboxes and radios
  </h2>
  <p>
    Place any checkbox or radio option within an input group’s addon instead of text.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="form-group"
    >
      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon"
        >
          
		
          <input
            type="checkbox"
          />
          
	
        </span>
        

        <input
          className="form-control"
          type="text"
        />
        

      </div>
    </div>
    


    <div
      className="form-group"
    >
      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon"
        >
          
		
          <input
            type="radio"
          />
          
	
        </span>
        

        <input
          className="form-control"
          type="text"
        />
        

      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: InputGroup Disabled renders 1`] = `
<Fragment>
  <h2
    id="disabled"
  >
    Disabled
  </h2>
  <p>
    Just like for forms you can add 
    <Attribute
      name="disabled"
    />
     to an input element to disable it. If you are going to disable an element in a 
    <Property
      value=".input-group"
    />
     make sure to also add the 
    <Attribute
      name="disabled"
    />
     attribute to the buttons.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <InputGroup
      disabled={true}
      id="input-id-3"
      label="Amount"
      placeholder="Rounded to nearest $"
      postfixValue=".00"
      prefixType="icon"
      prefixValue="attach_money"
      type="number"
    />
    <InputGroup
      disabled={true}
      postfixBtnColor="destructive"
      postfixType="button"
      postfixValue="Button"
      prefixBtnColor="guiding"
      prefixType="button"
      prefixValue="Button"
      type="text"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: InputGroup ValidationStates renders 1`] = `
<Fragment>
  <h2
    id="validation-states"
  >
    Validation states
  </h2>
  <p>
    You can also visualize validation on your input-groups. Just add 
    <Property
      value=".has-success"
    />
     or 
    <Property
      value=".has-error"
    />
     with a 
    <Property
      value=".input-group"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <InputGroup
      defaultValue="Anderson"
      placeholder="Name"
      prefixValue="Mr."
      type="text"
      validationState="success"
    />
     
    


    <InputGroup
      defaultValue="Smith"
      placeholder="Name"
      prefixValue="Agent"
      type="text"
      validationState="error"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: InputGroup WithFeedbackIcon renders 1`] = `
<Fragment>
  <h2
    id="with-feedback"
  >
    With feedback
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <InputGroup
      feedbackIcon="cancel"
      id="input-with-feedback-1"
      label="Name"
      placeholder="Name"
      prefixValue="Mr."
      type="text"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: InputGroup WithSelect renders 1`] = `
<Fragment>
  <h2
    id="with-select"
  >
    With select
  </h2>
  <p>
    Inserting text next to a 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;select&gt;
    </PrismCode>
     works just like any other input element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <InputGroup
      prefixValue="Profession"
      selectOptions={
        Array [
          "Bounty hunter",
          "Smuggler",
          "Jedi",
        ]
      }
      type="select"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: InputGroup renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    You can include additional information to specific input elements by adding 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;span&gt;
    </PrismCode>
    s or 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;button&gt;
    </PrismCode>
    s in a 
    <Property
      value=".input-group"
    />
    .
  </p>
  <BasicExample />
  <ButtonAddons />
  <WithSelect />
  <ValidationStates />
  <Disabled />
</DocContainer>
`;
